@@ -2,6 +2,7 @@ package com.skillstorm.hotel.services;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -24,7 +25,7 @@ public class RoomDTOMapper {
 			return price.getDay().isEqual(startDate) || price.getDay().isEqual(endDate) ||
 					(price.getDay().isAfter(startDate) && price.getDay().isBefore(endDate));
 		}).map(price -> price.getPrice())
-		.toList();
+		.collect(Collectors.toList());
 
 		return new RoomDTO(r.getId(), r.getName(), r.getSize(), prices);
 	}
